* fix formatting after finding settings error * work on the 'make sentences' problem